provision-k8s/bases/jaeger/tracing-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: tracing-lb
spec:
  type: LoadBalancer
  selector:
    app: jaeger
  ports:
    -
      name: zipkin
      port: 9411
      targetPort: 9411
    -
      name: grpc
      port: 14250
      targetPort: 14250
    -
      name: c-tchan-thrft
      port: 14267
      targetPort: 14267
    -
      name: c-binary-thrft
      port: 14268
      targetPort: 14268
