provision-k8s/bases/jaeger/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
spec:
  hosts:
  - "*"
  gateways:
  - tracegrapher-gateway
  http:
  - match:
    - uri:
        prefix: /jaeger
    route:
    - destination:
        host: jaeger-streaming-query
        port:
          number: 16686
